--- a/action.yml
+++ b/action.yml
@@ -24,18 +24,19 @@ runs:
         # Extract the included Ubuntu 24.04 rootfs
         echo "Extracting Ubuntu 24.04 rootfs..."
         mkdir -p "$SANDBOX_DIR/rootfs"
-        tar -xzf "${{ github.action_path }}/ubuntu-24.04-rootfs.tar.gz" -C "$SANDBOX_DIR/rootfs"
+        # Use sudo to preserve file ownership and permissions (especially for setuid binaries like sudo)
+        sudo tar -xzpf "${{ github.action_path }}/ubuntu-24.04-rootfs.tar.gz" -C "$SANDBOX_DIR/rootfs"
 
         # Setup basic requirements for the container
         echo "Setting up container environment..."
 
         # Copy host's DNS configuration for network access
-        cp /etc/resolv.conf "$SANDBOX_DIR/rootfs/etc/resolv.conf"
+        sudo cp /etc/resolv.conf "$SANDBOX_DIR/rootfs/etc/resolv.conf"
 
         # Create parent directories for workspace mount point
         WORKSPACE_DIR="${{ github.workspace }}"
         WORKSPACE_PARENT=$(dirname "$WORKSPACE_DIR")
-        mkdir -p "$SANDBOX_DIR/rootfs$WORKSPACE_PARENT"
+        sudo mkdir -p "$SANDBOX_DIR/rootfs$WORKSPACE_PARENT"
 
         # Create user in rootfs to match host user
         USER_ID=$(id -u)
@@ -45,27 +46,32 @@ runs:
         USER_HOME="/home/$USER_NAME"
 
         # Create home directory in rootfs
-        mkdir -p "$SANDBOX_DIR/rootfs$USER_HOME"
+        sudo mkdir -p "$SANDBOX_DIR/rootfs$USER_HOME"
+        # Set proper ownership for user's home directory
+        sudo chown "$USER_ID:$GROUP_ID" "$SANDBOX_DIR/rootfs$USER_HOME"
 
         # Add user and group to rootfs
-        echo "$USER_NAME:x:$USER_ID:$GROUP_ID:$USER_NAME:$USER_HOME:/bin/bash" >> "$SANDBOX_DIR/rootfs/etc/passwd"
-        echo "$USER_NAME:x:$GROUP_ID:" >> "$SANDBOX_DIR/rootfs/etc/group"
+        echo "$USER_NAME:x:$USER_ID:$GROUP_ID:$USER_NAME:$USER_HOME:/bin/bash" | sudo tee -a "$SANDBOX_DIR/rootfs/etc/passwd" > /dev/null
+        echo "$USER_NAME:x:$GROUP_ID:" | sudo tee -a "$SANDBOX_DIR/rootfs/etc/group" > /dev/null
+        # Add user to shadow file (needed for PAM authentication)
+        echo "$USER_NAME:*:19000:0:99999:7:::" | sudo tee -a "$SANDBOX_DIR/rootfs/etc/shadow" > /dev/null
+        sudo chmod 0640 "$SANDBOX_DIR/rootfs/etc/shadow"
 
-        # Configure passwordless sudo for the user (if sudo exists in rootfs)
-        if [ -d "$SANDBOX_DIR/rootfs/etc/sudoers.d" ]; then
-          echo "$USER_NAME ALL=(ALL) NOPASSWD: ALL" > "$SANDBOX_DIR/rootfs/etc/sudoers.d/$USER_NAME"
-          chmod 0440 "$SANDBOX_DIR/rootfs/etc/sudoers.d/$USER_NAME"
-        fi
+        # Configure passwordless sudo for the user (must exist in rootfs)
+        # Use sudo to create the file with correct root ownership
+        echo "$USER_NAME ALL=(ALL) NOPASSWD: ALL" | sudo tee "$SANDBOX_DIR/rootfs/etc/sudoers.d/$USER_NAME" > /dev/null
+        sudo chmod 0440 "$SANDBOX_DIR/rootfs/etc/sudoers.d/$USER_NAME"
+        sudo chown root:root "$SANDBOX_DIR/rootfs/etc/sudoers.d/$USER_NAME"
 
         # Create the user script inside the rootfs
-        cat > "$SANDBOX_DIR/rootfs/entrypoint.sh" << 'SANDBOXED_SCRIPT_EOF'
+        sudo tee "$SANDBOX_DIR/rootfs/entrypoint.sh" > /dev/null << 'SANDBOXED_SCRIPT_EOF'
         #!/bin/bash
         set -euo pipefail  # Exit on any error, undefined variable, or pipe failure
         cd "${{ github.workspace }}"
         ${{ inputs.run }}
         SANDBOXED_SCRIPT_EOF
 
-        chmod +x "$SANDBOX_DIR/rootfs/entrypoint.sh"
+        sudo chmod +x "$SANDBOX_DIR/rootfs/entrypoint.sh"
 
         # Generate OCI config using the pre-built binary
         "${{ github.action_path }}/generate-config" > "$SANDBOX_DIR/config.json"
@@ -78,7 +84,7 @@ runs:
         # Using overlay2 for all mounts (including workspace) and exclusive file access for mounts (assumes no external changes)
         # Note: Running runsc with sudo but container processes still run as runner user (not root)
         # Add debug logging if RUNNER_DEBUG is set
-        RUNSC_FLAGS="--network=host --overlay2=all:self --file-access-mounts=exclusive"
+        RUNSC_FLAGS="--network=host --overlay2=all:self --file-access-mounts=exclusive --allow-suid"
         if [ "${RUNNER_DEBUG:-0}" = "1" ]; then
           RUNSC_FLAGS="--debug --debug-log=/tmp/runsc-debug.log $RUNSC_FLAGS"
         fi
