--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: 'Allow running even if checkout action has persisted credentials (NOT RECOMMENDED)'
     required: false
     default: 'false'
+  persist-workspace-changes:
+    description: 'Allow changes to the workspace to persist on the host'
+    required: false
+    default: 'false'
 
 runs:
   using: 'composite'
@@ -104,10 +108,18 @@ runs:
 
         echo "Starting sandbox container..."
         cd "$SANDBOX_DIR"
-        # Using overlay2 for all mounts (including workspace) and exclusive file access for mounts (assumes no external changes)
+        # Configure overlay based on persist-workspace-changes setting
         # Note: Running runsc with sudo but container processes still run as runner user (not root)
+        if [ "${{ inputs.persist-workspace-changes }}" = "true" ]; then
+          echo "::warning::Workspace changes will persist on the host filesystem"
+          # Use overlay only for root filesystem, not for bind mounts (workspace)
+          OVERLAY_FLAGS="--overlay2=root:self"
+        else
+          # Use overlay for all mounts (including workspace) for full isolation
+          OVERLAY_FLAGS="--overlay2=all:self"
+        fi
         # Add debug logging if RUNNER_DEBUG is set
-        RUNSC_FLAGS="--network=host --overlay2=all:self --file-access-mounts=exclusive --allow-suid"
+        RUNSC_FLAGS="--network=host $OVERLAY_FLAGS --file-access-mounts=exclusive --allow-suid"
         if [ "${RUNNER_DEBUG:-0}" = "1" ]; then
           RUNSC_FLAGS="--debug --debug-log=/tmp/runsc-debug.log $RUNSC_FLAGS"
         fi
